--- a/PROJECT/project/package.json
+++ b/PROJECT/project/package.json
@@ -12,14 +12,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^10.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-icon": "^1.0.0",
     "react-icons": "^4.10.1",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
-    "react-spring": "^9.7.2",
+    "react-spring": "^8.0.27",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
